# ccf-medication

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
ccf_medication/: __init__.py
ccf_medication/constants/: pathing.py  plotting.py  system.py  tables.py  thresholds.py
ccf_medication/models/: calls.py  mixed_effects.py  significance.py
ccf_medication/plotting/: heatmaps.py  metadata_panels.py  stripplots.py  utils.py  volcano.py
ccf_medication/utils/: analysis.py  file_management.py  loading.py  miscellaneous.py
notebooks/: 0_data_prep.ipynb  1_metadata_analysis.ipynb
notebooks/3_analysis/: 3.1.a_volcano_plots_rem_vs_act.ipynb  3.1.b_volcano_plots_med_vs_no_med.ipynb  3.2.a_signif_gene_counts_rem_vs_act.ipynb  3.2.b_signif_gene_counts_med_vs_no_med.ipynb  3.3_response_genes.ipynb
notebooks/4_paper_plots/: 4.0_heatmap_counts.ipynb
scripts/: 2.1_run_modeling_med_vs_no_med.py  2.2_run_modeling_rem_vs_active.py
